Fix Collapse Icons Grid

--- a/assetsPh/css/main.css
+++ b/assetsPh/css/main.css
@@ -3410,3 +3410,68 @@ input, select, textarea {
 					content: '';
 					display: block;
 				}
+
+
+
+
+				/* XSmall */
+
+					@media screen and (max-width: 480px) {
+
+						/* Basic */
+
+							html, body {
+								min-width: 320px;
+							}
+
+						/* List */
+
+							ul.actions {
+								margin: 0 0 2em 0;
+							}
+
+								ul.actions li {
+									display: block;
+									padding: 1em 0 0 0;
+									text-align: center;
+									width: 100%;
+								}
+
+									ul.actions li:first-child {
+										padding-top: 0;
+									}
+
+									ul.actions li > * {
+										margin: 0 !important;
+										width: 100%;
+									}
+
+								ul.actions.small li {
+									padding: 0.5em 0 0 0;
+								}
+
+									ul.actions.small li:first-child {
+										padding-top: 0;
+									}
+
+							ul.icons-grid li {
+								box-shadow: inset 0 1px 0 0 #dddddd !important;
+								float: none;
+								margin: 2em 0 0 0;
+								padding: 2em 0 0 0;
+								width: 100%;
+							}
+
+								ul.icons-grid li:first-child {
+									box-shadow: none !important;
+									margin-top: 0;
+									padding: 1em 0 0 0;
+								}
+
+								ul.icons-grid li:nth-child(2n + 1) {
+									box-shadow: none;
+								}
+
+								ul.icons-grid li:nth-child(2n + 3):before {
+									display: none;
+								}
